Fixing hero spacing

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -48,8 +48,8 @@ div.hero {
 		padding-top: rem-calc(20);
 	}
 	.tagline {
-		padding-top: rem-calc(70);
-		padding-bottom: rem-calc(20);
+		padding-top: rem-calc(10);
+		//padding-bottom: rem-calc(0);
 	}
 	h1, h2, h3, h4, h5 {
 		color: #fff;
